<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_test"
            android:title="@string/nav_test" />
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_tutorial"
            android:title="@string/nav_tutorial" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/nav_about_us" />
    </group>

    <item android:title="@string/nav_title">
        <menu>
            <item
                android:id="@+id/exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/nav_exit" />
        </menu>
    </item>
</menu>