<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:rowCount="5">

        <androidx.cardview.widget.CardView
            android:id="@+id/TutCard1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="14dp"
            app:cardElevation="12dp"
            app:contentPadding="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/camera1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/camera1" />

                <TextView
                    android:id="@+id/cv_tutorial1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_toEndOf="@+id/camera1"
                    android:layout_toRightOf="@+id/camera1"
                    android:text="@string/cv_tutorial1"
                    android:textSize="20sp"
                    app:fontFamily="@font/vazirbold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/TutCard2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="14dp"
            app:cardElevation="12dp"
            app:contentPadding="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/camera2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/camera2" />

                <TextView
                    android:id="@+id/cv_tutorial2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_toStartOf="@id/camera2"
                    android:layout_toLeftOf="@+id/camera2"
                    android:layout_toEndOf="@+id/camera2"
                    android:layout_toRightOf="@+id/camera2"
                    android:gravity="end"
                    android:text="@string/cv_tutorial2"
                    android:textSize="18sp"
                    app:fontFamily="@font/vazirbold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/TutCard3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="14dp"
            app:cardElevation="12dp"
            app:contentPadding="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/camera3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/camera3" />

                <TextView
                    android:id="@+id/cv_tutorial3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_toEndOf="@+id/camera3"
                    android:layout_toRightOf="@+id/camera3"
                    android:text="@string/cv_tutorial3"
                    android:textSize="18sp"
                    app:fontFamily="@font/vazirbold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/TutCard4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="14dp"
            app:cardElevation="12dp"
            app:contentPadding="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/camera4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/camera4" />

                <TextView
                    android:id="@+id/cv_tutorial4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_toStartOf="@id/camera4"
                    android:layout_toLeftOf="@+id/camera4"
                    android:layout_toEndOf="@+id/camera4"
                    android:layout_toRightOf="@+id/camera4"
                    android:gravity="end"
                    android:text="@string/cv_tutorial4"
                    android:textSize="18sp"
                    app:fontFamily="@font/vazirbold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>
</ScrollView>