<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:columnOrderPreserved="false"
        android:rowCount="5">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="14dp"
            app:cardElevation="12dp"
            app:contentPadding="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/camera5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/camera5" />

                <TextView
                    android:id="@+id/cv_test1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:layout_toEndOf="@+id/camera5"
                    android:layout_toRightOf="@+id/camera5"
                    android:text="@string/cv_test1"
                    android:textSize="18sp"
                    app:fontFamily="@font/vazirbold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cv_test1"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@+id/camera5"
                    android:layout_toRightOf="@+id/camera5"
                    android:gravity="center"
                    android:text="@string/cv_test_des"
                    android:textSize="16sp"
                    app:fontFamily="@font/vazir" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="14dp"
            app:cardElevation="12dp"
            app:contentPadding="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/camera6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/camera6" />

                <TextView
                    android:id="@+id/cv_test2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="12dp"
                    android:layout_toStartOf="@+id/camera6"
                    android:layout_toLeftOf="@+id/camera6"
                    android:gravity="center"
                    android:text="@string/cv_test2"
                    android:textSize="18sp"
                    app:fontFamily="@font/vazirbold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cv_test2"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toStartOf="@+id/camera6"
                    android:layout_toLeftOf="@+id/camera6"
                    android:gravity="center"
                    android:text="@string/cv_test_des"
                    android:textSize="16sp"
                    app:fontFamily="@font/vazir" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="14dp"
            app:cardElevation="12dp"
            app:contentPadding="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/camera9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/camera9" />

                <TextView
                    android:id="@+id/cv_test3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:layout_toEndOf="@+id/camera9"
                    android:layout_toRightOf="@+id/camera9"
                    android:text="@string/cv_test3"
                    android:textSize="18sp"
                    app:fontFamily="@font/vazirbold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cv_test3"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@+id/camera9"
                    android:layout_toRightOf="@+id/camera9"
                    android:gravity="center"
                    android:text="@string/cv_test_des"
                    android:textSize="16sp"
                    app:fontFamily="@font/vazir" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="14dp"
            app:cardElevation="12dp"
            app:contentPadding="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/camera8"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/camera8" />

                <TextView
                    android:id="@+id/cv_test4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="12dp"
                    android:layout_toStartOf="@+id/camera8"
                    android:layout_toLeftOf="@+id/camera8"
                    android:gravity="center"
                    android:text="@string/cv_test4"
                    android:textSize="18sp"
                    app:fontFamily="@font/vazirbold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cv_test4"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toStartOf="@+id/camera8"
                    android:layout_toLeftOf="@+id/camera8"
                    android:gravity="center"
                    android:text="@string/cv_test_des"
                    android:textSize="16sp"
                    app:fontFamily="@font/vazir" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="14dp"
            app:cardElevation="12dp"
            app:contentPadding="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/test_simulation"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/test_simulation" />

                <TextView
                    android:id="@+id/cv_test5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:layout_toEndOf="@+id/test_simulation"
                    android:layout_toRightOf="@+id/test_simulation"
                    android:text="@string/cv_test5"
                    android:textSize="18sp"
                    app:fontFamily="@font/vazirbold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cv_test5"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@+id/test_simulation"
                    android:layout_toRightOf="@+id/test_simulation"
                    android:gravity="center"
                    android:text="@string/cv_test_des"
                    android:textSize="16sp"
                    app:fontFamily="@font/vazir" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

</ScrollView>